tests/negative_pomidory/obj_in_page_factory_but_not_on_webpage2.pomidor



dfdgdg
dfgdf

I click on #practice_menu_button
and I click on #non_existent_obj

@name tc#2
I click on #practice_menu_button
